# fasthtml-cloudflare

./: .gitignore  README.md  pyproject.toml  wrangler.jsonc
src/: dorm.py  pydorm.py  worker.py
